@@ -93,6 +93,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   shuf --repeat no longer dumps core if the input is empty.
   [bug introduced with the --repeat feature in coreutils-8.22]
 
+  sort when using multiple threads now avoids undefined behavior with mutex
+  destruction, which could cause deadlocks on some implementations.
+  [bug introduced in coreutils-8.6]
+
   tail -f now uses polling mode for VXFS to cater for its clustered mode.
   [bug introduced with inotify support added in coreutils-7.5]
 
